base.css fix extra margin-bottom on .aui-helper-clearfix; no visibility hidden;
git-svn-id: svn://svn.liferay.com/repos/public/alloy/trunk@37426 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/themes/base/css/base.css
+++ b/themes/base/css/base.css
@@ -69,10 +69,10 @@
 
 .aui-helper-clearfix:after {
 	clear: both;
-	content: ".";
+	content: " ";
 	display: block;
 	height: 0;
-	visibility: hidden;
+	overflow: hidden;
 }
 
 .aui-helper-clearfix {
